--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   },
   "keywords": [],
   "dependencies": {
-    "@localzet/aura-contract": "^1.0.0",
     "@localzet/grammy-nestjs": "^1.0.0",
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
     "@nestjs/platform-fastify": "^11.1.3",
     "@prisma/client": "6.12.0",
+    "@remnawave/backend-contract": "^2.1.2",
     "axios": "^1.10.0",
     "debug": "^4.4.1",
     "dotenv": "^17.0.1",
@@ -39,6 +39,7 @@
     "nestjs-zod": "^4.3.1",
     "pkg-types": "^2.2.0",
     "table": "^6.9.0",
+    "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "zod": "^3.25.74"
   },
