--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.6",
     "@nestjs/platform-fastify": "^11.1.3",
     "@prisma/client": "6.12.0",
     "@remnawave/backend-contract": "^2.1.2",
