--- a/admin-frontend/package.json
+++ b/admin-frontend/package.json
@@ -23,12 +23,15 @@
     "react-router-dom": "^6.27.0",
     "react-force-graph": "^1.25.3",
     "react-force-graph-2d": "^1.25.3",
+    "react-force-graph-3d": "^1.25.3",
+    "three": "^0.169.0",
     "zod": "^3.25.74",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/three": "^0.169.0",
     "@vitejs/plugin-react-swc": "^4.1.0",
     "typescript": "^5.9.2",
     "vite": "^7.1.12"
